--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -1,17 +1,29 @@
-deploy:
-  runs-on: ubuntu-latest
-  needs: build
-  steps:
-    - name: Checkout репозитория
-      uses: actions/checkout@v4
+name: Next.js CI/CD
 
-    - name: Установка Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: 18
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
-    - name: Установка зависимостей
-      run: npm install
+jobs:
+  build-and-test:
+    runs-on: ubuntu-latest
 
-    - name: Сборка проекта
-      run: npm run build && npm run export
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Run tests
+        run: npm test
+
+      - name: Build Next.js App
+        run: npm run build
