--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -20,13 +20,16 @@ jobs:
           node-version: '16'
 
       - name: Install dependencies
-        working-directory: Frontend/leningrad
+        working-directory: leningrad
         run: npm ci
 
       - name: Run tests
-        working-directory: Frontend/leningrad
+        working-directory: leningrad
         run: npm test
 
       - name: Build Next.js App
-        working-directory: Frontend/leningrad
+        working-directory: leningrad
         run: npm run build
+
+      - name: List files for debugging
+        run: ls -R
