--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -27,6 +27,6 @@ jobs:
         working-directory: leningrad
         run: npm run build
 
-      - name: Run tests
-        working-directory: leningrad
-        run: npm test
+#      - name: Run tests
+#        working-directory: leningrad
+#        run: npm test
