--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@maptiler/sdk": "^3.0.1",
+    "leaflet": "^1.9.4",
+    "maplibre-gl": "^5.1.0",
+    "next": "15.1.6",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.6"
+    "react-map-gl": "^8.0.1"
   },
   "devDependencies": {
     "postcss": "^8",
