--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -17,7 +17,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "^8.0.1",
-    "lucide-react": "^0.330.0"
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "postcss": "^8",
