--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -16,7 +16,8 @@
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-map-gl": "^8.0.1"
+    "react-map-gl": "^8.0.1",
+    "react-icons": "^4.12.0"
   },
   "devDependencies": {
     "postcss": "^8",
