--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -8,20 +8,22 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "@maptiler/sdk": "^3.0.1",
     "leaflet": "^1.9.4",
     "maplibre-gl": "^5.1.0",
-    "next": "15.1.6",
+    "next": "^15.2.4",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-map-gl": "^8.0.1",
-    "react-icons": "^4.12.0"
+    "react-icons": "^4.12.0",
+    "react-map-gl": "^8.0.1"
   },
   "devDependencies": {
+    "@types/node": "22.13.11",
+    "@types/react": "19.0.12",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.8.2"
   }
 }
