--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -8,7 +8,6 @@
     "start": "next start",
     "lint": "next lint"
   },
-  
   "dependencies": {
     "@maptiler/sdk": "^3.0.1",
     "leaflet": "^1.9.4",
@@ -17,8 +16,9 @@
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^4.12.0",
     "react-map-gl": "^8.0.1",
-    "react-icons": "^4.12.0"
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "postcss": "^8",
