--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -17,7 +17,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
-    "react-map-gl": "^8.0.1"
+    "react-map-gl": "^8.0.1",
+    "swiper": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "22.13.11",
