--- a/leningrad/package.json
+++ b/leningrad/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^4.12.0",
     "react-map-gl": "^8.0.1",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/node": "22.13.11",
